<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pitch Perfect</string>
    <string name="facebook_application_id">263872380333771</string>
    <string name="fb_login_protocol_scheme">fb263872380333771</string>
    <string name="facebook_client_token">eb375cce82f2fbb23c5e4f4044986c14</string>
    <string name="CtoC">From C to B</string>
    <string name="FtoF">From F to E</string>
    <string name="AddSong">Add Song</string>
    <string name="SongTitle">Song Title</string>
    <string name="SongKey">Song Key</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="EditSongList">Edit Songs</string>
    <string name="StopEditing">Stop Editing</string>
    <string name="EditSong">Edit Song</string>
    <string name="RemoveSong">Remove Song</string>
    <string name="MoveUp">Move Up</string>
    <string name="MoveDown">Move Down</string>
    <string name="NoSongsInList">There are currently no songs in your song list.</string>
    <string name="Settings">Settings</string>
    <string name="HomePage">apps.depoll.com</string>
    <string name="ClearSongList">Clear Song List</string>
    <string name="NotesToggle">Notes play until pressed a second time</string>
    <string name="Purchase">Purchase to remove ads</string>
    <string name="Purchased">(Licensed)</string>
    <string name="DepollSoft">DepollSoft</string>
    <string name="RateReview">Rate &amp; Review</string>
    <string name="TermsOfUse">Terms of Use</string>
    <string name="SortAll">Sort all songs by title</string>
    <string name="WakeLock">Prevent screen from turning off or locking while Pitch Perfect is in use</string>
    <string name="LogIn">Log in</string>
    <string name="LogOut">Log out</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="DeleteAccount">Delete account</string>
    <string name="DeleteAccountConfirmation">Are you sure you want to delete your account and all associated data?  This cannot be undone.  Locally-saved songs and preferences will not be deleted.</string>
    <string name="LogInInfo">Log in to back up and synchronize your song list and settings.</string>
    <string name="ViewChangelog">View Changelog</string>
    <string name="widget_name">Pitch Pipe</string>
    <string name="MoreLogins"><u>More login options</u></string>
    <string name="SkipLogin">Skip</string>
    <string name="LoginTitle">Log in to Pitch Perfect</string>
    <string name="LoginExplanation">
        <![CDATA[<p><b>Recommended:</b> Log in to Pitch Perfect and we\'ll save your settings and song list to the cloud.</p>
        <p>
            When you log in to Pitch Perfect, we\'ll automatically synchronize your settings and song list from device to device.
            Whether you just want to back up your songs or are working with multiple phones or tablets, logging in ensures that your
            data goes where you go.
        </p>
        <p>
            Pitch Perfect does not collect any of your personal data for this free service.
        </p>]]>
    </string>
        <string name="HoomiLoginExplanation">
        <![CDATA[<p><b>Notice:</b> You have previously logged into Pitch Perfect with Hoomi, which is being discontinued.
        You have been logged out of Pitch Perfect.
        You may choose to log in with Facebook, or continue without logging in.</p>
        <p>
            When you log in to Pitch Perfect, we\'ll automatically synchronize your settings and song list from device to device.
            Whether you just want to back up your songs or are working with multiple phones or tablets, logging in ensures that your
            data goes where you go.
        </p>
        <p>
            Pitch Perfect does not collect any of your personal data for this free service.
        </p>]]>
    </string>
    <string name="RemoveAds"><u>Tired of Ads?</u></string>
    <string name="quick_pitch">Quick Pitch</string>
    <string name="notes">Notes</string>
    <string name="keys">Keys</string>
    <string name="songs">Songs</string>
    <string name="minor">Minor</string>
    <string name="major">Major</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_system">Default</string>
    <string name="themeTitle">Theme</string>
    <string name="manage_subscription">Manage Subscription</string>
</resources>