<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:focusable="true">
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/linearLayout1" android:layout_gravity="center_horizontal"
		android:layout_width="wrap_content">
		<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
			android:layout_width="wrap_content" android:text="@string/app_name"
			android:textSize="12dp"></TextView>
		<TextView android:id="@+id/textView5" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text=" - "
			android:textSize="12dp"></TextView>
		<TextView android:layout_height="wrap_content" android:id="@+id/textView6"
			android:layout_width="wrap_content" android:textSize="12dp"
			android:text="@string/VersionString"></TextView>
		<TextView android:layout_height="wrap_content" android:id="@+id/aboutPurchased"
			android:layout_width="wrap_content" android:textSize="12dp"
			android:text="@string/Purchased" android:layout_marginLeft="4dp"></TextView>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal">
		<depollsoft.lib.ui.Hyperlink android:id="@+id/textView3"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:textSize="12dp"
			android:tag="http://apps.depoll.com" android:text="@string/DepollSoft"></depollsoft.lib.ui.Hyperlink>
		<TextView android:layout_width="wrap_content"
			android:layout_gravity="center_horizontal" android:textSize="12dp"
			android:layout_height="wrap_content" android:text="@string/Copyright"
			android:id="@+id/copyrightTextView" android:layout_marginLeft="4dp"></TextView>
	</LinearLayout>
	<depollsoft.lib.ui.Hyperlink android:id="@+id/textView3"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:textSize="12dp"
		android:text="@string/HomePage" android:tag="http://apps.depoll.com"></depollsoft.lib.ui.Hyperlink>
	<depollsoft.lib.ui.Hyperlink android:id="@+id/textView4"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:textSize="12dp"
		android:tag="https://market.android.com/details?id=depollsoft.pitchperfect" android:text="@string/RateReview"></depollsoft.lib.ui.Hyperlink>
	<depollsoft.lib.ui.Hyperlink android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/Hyperlink01" android:textSize="12dp" android:text="@string/TermsOfUse" android:tag="http://apps.depoll.com/terms-of-use"></depollsoft.lib.ui.Hyperlink>
</LinearLayout>
