<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <depollsoft.pitchperfect.CropFillImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_panobackground"/>

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/toggleNoteCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/NotesToggle">
                </CheckBox>

                <CheckBox
                    android:id="@+id/wakeLockCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WakeLock"/>

                <Button
                    android:id="@+id/clearSongListButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/ClearSongList">
                </Button>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/LogInInfo"/>

                <LinearLayout
                    android:id="@+id/loginButtonLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/LogIn"/>

                    <Button
                        android:id="@+id/logoutButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/LogOut"/>
                </LinearLayout>

                <Button
                    android:id="@+id/changelogButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ViewChangelog"/>

                <include layout="@layout/aboutfooter"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>