<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <depollsoft.pitchperfect.CropFillImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_panobackground"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/songTitleEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/SongTitle"
            android:inputType="textCapWords|textAutoCorrect">
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/SongKey">
            </TextView>

            <Spinner
                android:id="@+id/songKeySpinner"
                android:layout_width="fill_parent"
                android:layout_height="75dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="?attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <Button
                android:id="@+id/cancelButton"
                style="?attr/buttonBarNeutralButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/Cancel">
            </Button>

            <Button
                android:id="@+id/okButton"
                style="?attr/buttonBarPositiveButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/Ok">
            </Button>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>